<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="80dp">
    <!-- Bottom View Start-->
    <LinearLayout
        android:id="@+id/bottom_wrapper"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:background="#2277FF"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/doneclick"
            android:id="@+id/doneB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="doneClick"
            android:src="@drawable/done" />

        <ImageView
            android:contentDescription="@string/todoclick"
            android:id="@+id/todoB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="todoClick"
            android:src="@drawable/cancel" />
        <!--What you want to show-->
    </LinearLayout>
    <!-- Bottom View End-->

    <!-- Surface View Start -->
    <LinearLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/categorie"
            android:layout_height="match_parent"
            android:layout_weight="22"
            android:background="#456345" />

        <RelativeLayout
            android:id="@+id/showItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/dateView"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dateHour"
                    android:layout_width="wrap_content"
                    android:text="@string/datetemp"
                    android:textSize="17sp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/dateMonth"
                    android:text="@string/monthtemp"
                    android:textSize="15sp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/dateYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yeartemp"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/dateView"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:layout_toEndOf="@+id/dateView"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="Title" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/title"
                android:layout_below="@+id/title"
                android:maxHeight="40dp"
                android:textColor="@android:color/black"
                tools:text="To do..." />

            <TextView
                android:id="@+id/date"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@android:color/darker_gray"
                android:textStyle="italic"
                tools:text="due to 25/11" />
        </RelativeLayout>
    </LinearLayout>
    <!-- Surface View End -->
</com.daimajia.swipe.SwipeLayout>